# GBA-Mandelbrot

./: CMakeLists.txt  LICENSE  README.md  main.cpp
cmake/: gbafix.cmake  toolchain.cmake
cmake/Modules/: FindGBA.cmake
